Action keys hash compiler options in argv order
The javac, kotlinc and groovyc keys sorted the free options before
hashing, so `--add-modules a --limit-modules b` and `--add-modules b
--limit-modules a` — the same words, different compiles — shared a key
and one restored the other's output. A flag pairs with the value after
it; the keys and the stamp digest hash the options as given.

JK-3107